objects/Score_Status_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Maximum_Score__c</fullName>
        <label>Maximum Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Score__c</fullName>
        <label>Minimum Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Score Status Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SSC-{0000000000}</displayFormat>
        <label>Score Status Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Status Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>